# pythonevolverstage

./: .dockerignore  .gitignore  .gitmodules  1994_core_war_standard.txt  1994_extended.txt  AGENTS.md  CMakeCache.txt  CMakeLists.txt  Dockerfile  Dockerfile.stress  Makefile  README.md  Validate1_1R_assembled.txt  battle_runner.py  cmake_install.cmake  config.py  constants.py  create_instruction_library.py  div_test_assembled.txt  engine.py  evolverstage.py  evolverstage_main.py  generate_test_data.py  jmn_djn_test.red  jmn_djn_test_assembled.txt  optimizer_config.yaml  precalculated_battles.json  redcode-worker.cpp  redcode.py  redcode_dump.txt  run_optimizer.py  settings.ini  status.json  storage.py  stress_test.py  test_dev.txt  test_support.py  ui.py  w1.red  w2.red
baseline/: example_nmars.txt  folding.txt  mov_imm.txt
benchmarks/: README.md
evolver/: logger.py
examples/: Round1-Evolved122.red  Round1-Evolved4.red  Round2-Evolved14.red  Round2-Evolved26.red  Round3-Evolved129.red  Round3-Evolved473.red  Round4-Evolved173.red  Round4-Evolved317.red  examples.txt  nano-445.red  nano-65.red  nano-75.red
tests/: test_analysis.py  test_arena_idx.py  test_batch_normalization.py  test_battle_logic.py  test_battle_runner_error.py  test_benchmark.py  test_benchmark_utils.py  test_breeding.py  test_comparative_tournament.py  test_compare.py  test_custom_battle.py  test_data_logger.py  test_diff.py  test_diversity_gaps.py  test_engine.py  test_evolution_status.py  test_evolver_config.py  test_evolver_utils.py  test_evolverstage.py  test_evolverstage.py.orig  test_evolverstage.py.patch  test_export.py  test_gauntlet.py  test_hall_of_fame.py  test_harvest.py  test_history.py  test_inspection.py  test_instruction_collection.py  test_instruction_normalization.py  test_leaderboard.py  test_lineage.py  test_log_utils.py  test_marble_bag.py  test_nmars_runner.py  test_normalization_runner.py  test_optimization.py  test_pairwise_extraction.py  test_pmars_parity.py  test_precalculated_battles.py  test_rankings.py  (+13 more)
tools/: clean_redcode.py  find_incomplete.py  generate_test_data.py  plot_benchmark.py  process_redcode.py  stress_test.py
